# CRTP-DynamicPeriodicTask

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  burn.c  burn.sh
include/: constants.h  event.h  event_queue.h  net_core.h  supervisor.h  task.h  task_config.h  task_routines.h  task_runtime.h  tcp_server.h
include/utils/: constants.h  event.h  task.h
src/: event.c  event_queue.c  main.c  net_core.c  supervisor.c  task.c  task_config.c  task_routines.c  task_runtime.c  tcp_server.c
src/utils/: event.c
tests/: integration_tests.py  stress_tests.py  test_utils.py
